# Egomotion_with_Local_Loop_Closures

./: CMakeLists.txt  README.md  build.sh
matlab_scripts/: SE3_2_se3.m  VisualizeTrajectory.m  adaptive_rotation_averaging.m  compare_rot_matrix_mkr.m  concatenateOriginPose.m  concatenatePose.m  concatenateRelativePose.m  hello.m  makeSampleFile.m  makefirstsamplefile.m  perform_rotation_averaging.m  perform_rotation_averaging_transition.m  perform_rotation_averaging_transition1.m  plot_graph.m  rotavg_making_kf_new.m  rotavg_matrix_making.m  rotavg_matrix_making_kf.m  rotavg_matrix_making_with_all.m  small_batch_rotavg.m  small_batch_rotavg_bootstrap.m  visualizetrajectory1.m
matlab_scripts/SO3GraphAveraging/: AverageSO3Graph.m  Example1.m  Example2.m  Example3.m  README.txt
matlab_scripts/se32SE3/: se3_2_SE3.m
src/: DepthHypothesis.h  DepthPropagation.cpp  DepthPropagation.h  DisplayFunc.cpp  DisplayFunc.h  EigenInitialization.cpp  EigenInitialization.h  ExternVariable.h  Frame.cpp  Frame.h  GlobalOptimize.cpp  GlobalOptimize.h  ImageFunc.cpp  ImageFunc.h  LoopFrame.h  PixelWisePyramid.cpp  PixelWisePyramid.h  Pyramid.cpp  Pyramid.h  Tests.h  ToggleFlags.h  UserDefinedFunc.cpp  UserDefinedFunc.h  main.cpp
